# as

./: CMakeLists.txt  Readme.md  install.sh  license_header.txt  loop1.asm  stdlib.sh  str1.asm  test.py  test.sh
asm/: asm.h  cmp.c  data.c  math.c  misc.c  mov.c  push.c  utils.c
asm/elf/: elf_bin.c
dumps/: dump1.txt  dump2.txt
elf/: elf_bin.c  elf_bin.h
plan/: main.c
src/: CMakeLists.txt  asm_main.c  elf_builder.c  elf_builder.h  grammar.y  grammar_old.y  main.c  main.cpp  rela_tab.c  rela_tab.h  scanner.l  sh_list.c  sh_list.h  str_list.c  str_list.h  sym_table.c  symtab.c  symtab.h
src/asm/: amd64.hpp  asm.h  asm.hpp  cmp.c  cmp.cpp  data.c  data.cpp  div.cpp  encoding.cpp  func.cpp  imul.cpp  lea.cpp  logic.c  logic.cpp  math.c  math.cpp  mov.c  mov.cpp  operand.cpp  push.cpp  simple.cpp  utils.c  utils.cpp
src/elf/: elf_bin.c  elf_bin.cpp  elf_bin.h  elf_bin.hpp  elf_builder.c  elf_builder.cpp  elf_builder.h  elf_data.c  elf_data.cpp  elf_shstrtab.c  elf_strtab.c  elf_strtab.cpp  elf_symtab.c  elf_symtab.cpp  elf_text.c  elf_text.cpp
src/parser/: data.c  parser.h  split.c
src/utils/: str_table.c  str_table.h  sym_table.c  sym_table.h
stdlib/: exit.asm  puts.asm  string.asm
test/: 64bit.asm  call.asm  cmp1.asm  cmp2.asm  empty.asm  loop1.asm  println.asm  str1.asm
test/cmp/: cmp1.asm  loop1.asm
test/func/: call.asm  label.asm  println.asm
test/generic/: 64bit.asm
test/mem/: empty.asm
test/stdlib/: std1.asm
test/todo/: empty.asm
test/unit/add/: add1.asm  add2.asm  add3.asm  add4.asm  add5.asm  add6.asm  add7.asm  add8.asm  add9.asm
test/unit/cmp/: cmp1.asm  cmp2.asm
test/unit/mov/: mov1.asm  mov2.asm  mov3.asm
test/unit/mul/: mul1.asm  mul2.asm  mul3.asm  mul4.asm  mul5.asm  mul6.asm
test/unit/sub/: sub1.asm  sub2.asm  sub3.asm  sub4.asm  sub5.asm  sub6.asm
